# river

./: .coderabbit.yaml  .dockerignore  .editorconfig  .eslintignore  .git-blame-ignore-revs  .gitignore  .prettierignore  .prettierrc.js  .solhint.json  .yarnrc.yml  LICENSE.txt  README.md  SECURITY.md  buf.yaml  foundry.toml  go.work  k.sh  lerna.json  package.json  remappings.txt  turbo.json  vitest.config.mts  vitest.config.ts  vitest.shared.js  vitest.workspace.ts
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: 01_ask_a_question.md  02_bug_report.md  03_feature_request.md  04_workitem.yaml  ask-a-question.md  ask_a_question.md  bug_report.md  feature_request.md
.github/workflows/: Bytecode_diff_report.yml  Metrics_discovery_docker.yml  Network_diff_upgrade.yml  Publish_npm_packages.yml  Render_diff_upgrade_report.yml  River_node_docker.yml  Stream_metadata_docker.yml  Stress_test_node_docker.yml  Upgrade_network_facets.yml  XChain_monitor_docker.yml  ci.yml  clean_turbo_cache.yml
.yarn/patches/: jest-worker-npm-29.5.0-70da3388f1.patch
contracts/: .env.example  .env.localhost  .gitignore  .prettierignore  .prettierrc.js  .solhint.json  README.md  makefile  package.json
contracts/diamond/: networks.json  package.json  schema.graphql
contracts/scripts/: readme.md
core/: .cursorrules  .dockerignore  .golangci.yml  Dockerfile  README.md  Taskfile.yml  archive_node.supervisord.conf  docker-compose.yml  fmt.sh  go.mod  go.sum  jest.env.ts  justfile  lint.sh  run.sh  staticcheck.conf  supervisord.conf
core/cmd/: app_service_cmd.go  archive_cmd.go  bot_service_cmd.go  config_cmd.go  config_test.go  dd_profiler.go  debug_cmd.go  genkey_cmd.go  get_stream.go  info_cmd.go  is_entitled_cmd.go  (+16 more)
core/mls/mls-tools/: Cargo.toml  justfile
core/mls/mls-tools/backup/lib/: mls_tools.rs  mod.rs
core/mls/mls-tools/crates/mls/: Cargo.toml
core/mls/mls-tools/crates/mls/src/: lib.rs
core/mls/mls-tools/crates/mlslib/: Cargo.toml  build.rs
core/mls/mls-tools/crates/mlslib/src/: lib.rs
core/mls/mls-tools/crates/protocol/: Cargo.toml  build.rs
core/mls/mls-tools/crates/protocol/proto/: mls_tools.proto
core/mls/mls-tools/crates/protocol/src/: lib.rs
core/mls/mls-tools/crates/service/src/: main.rs
core/mls/mls-tools/crates/tool/: Cargo.toml
core/mls/mls-tools/crates/tool/src/: main.rs
core/mls/mls-tools/protos/: mls_tools.proto
core/mls/mls-tools/src/: main.rs
core/mls/mls-tools/src/lib/: lib.rs
infra/: .terraform.lock.hcl  main.tf  run.sh  values.yaml  variables.tf
lib/: @prb  account-abstraction  ds-test  solady
mls/mls-tools/crates/service/: Cargo.toml  build.rs
mls/mls-tools/crates/service/src/: main.rs
protocol/: README.md  apps.proto  auth.proto  bots.proto  internode.proto  notifications.proto  package.json  payloads.proto  protocol.proto
scripts/: Makefile  bc-all-start.sh  bc-all-stop.sh  build-artifacts.sh  build-contract-coverage.sh  build-contract-types.sh  build-contracts.sh  build-mls.sh  build-protobufs.sh  check-go-version.sh  check-node-version.sh  configure-nodes.sh  copyLibs.js  create-new-release-tag.sh  deploy-contracts.sh  foundry-up.sh  gen-bindings-remove-struct.go  gen-river-node-bindings.sh  gen-riverchain-config.sh  gen-xchain-bindings.sh  generate_sdk_index.sh  get_paginated_streams.sh  install-deps.sh  install-protobuf-deps.sh  is_entitled_input.json  is_entitled_script.sh  kill-all-local-dev.sh  kill-on-port.sh  kill-watches.sh  kill_dev.sh  launch-ci-tests.sh  lint-shell-scripts.sh  make-config.js  node-no-warn.js  node-registration-lib.sh  print-versions.sh  publish-to-npm.sh  set-riverchain-config.sh  start-load-testing-redis.sh  start-local-basechain.sh  (+13 more)
(+2039 files in other folders)
