[workspace]

members = ["crates/*"]

resolver = "2"

[workspace.package]
version = "0.0.0-beta.0"
edition = "2021"
rust-version = "1.78"
license = "Apache-2.0"
homepage = "https://river.build"
repository = "https://github.com/bas-vk/river-rs"
exclude = [".github/"]

[workspace.lints]
rust.missing_debug_implementations = "warn"
#rust.missing_docs = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = "deny"
rustdoc.all = "warn"

[workspace.dependencies]
river-mls-protocol = { path = "crates/protocol" }
river-mls = { path = "crates/mls" }

tonic-build = "0.12"
tonic = { version = "0.12", features = ["default", "tls"] }
prost = "0.13"
prost-types = "0.13"
protobuf-json-mapping = "3.7.1"

mls-rs = { version = "0.43.1", features = ["external_client"] }
mls-rs-crypto-rustcrypto = { version = "0.12.0", default-features = false, features = ["std"] }
