[package]
name = "service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
river-mls = {workspace = true}
river-mls-protocol = {workspace = true}

tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1"
tonic = {workspace = true}

[lints]
workspace = true
