[package]
name = "river-mls"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
river-mls-protocol = {workspace = true}
mls-rs = {workspace = true}
mls-rs-crypto-rustcrypto = {workspace = true}