[package]
name = "mls-lib"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
river-mls = {workspace = true}
river-mls-protocol = {workspace = true}
prost = {workspace = true}

[lib]
crate-type = ["staticlib"]