[package]
name = "river-mls-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
tonic = {workspace = true}
prost = {workspace = true}
prost-types = {workspace = true}
prost-wkt = "0.6"
prost-wkt-types = "0.6"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = {workspace = true}
prost-wkt-build = "0.6"