[package]
name = "river-mls-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
prost = {workspace = true}
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = {workspace = true}