[package]
name = "tool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
river-mls-protocol = {workspace = true}
river-mls = {workspace = true}
protobuf-json-mapping = {workspace = true}
serde_json = "1.0"

[lints]
workspace = true
